<resources>
    <string name="app_name">Sky Sight</string>

    <!-- Added Strings -->
    <string name="date_today">Day Month Date, Year</string>
    <string name="town_name">Town Name</string>
    <string name="weather_type">Weather Condition</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="main_temperature">0°C</string>
    <string name="wind">Wind</string>
    <string name="image">Image Input</string>
    <string name="wind_speed">0 Km/h</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_percentage">0%</string>
    <string name="day_tracker">Day X</string>
    <string name="data_fetch">Fetching data. Please wait…</string>
    <string name="data_error">Connection Error. Please try again…</string>

</resources>