<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_sky"
    android:id="@+id/RL_Background"
    tools:context=".MainActivity">

    <!-- Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/TV_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_today"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/TV_townName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_date"
                android:padding="10dp"
                android:text="@string/town_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/IV_weatherImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/TV_townName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                android:src="@drawable/weather_icon" />

            <TextView
                android:id="@+id/TV_weatherType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/IV_weatherImage"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/weather_type"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/TV_mainTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_weatherType"
                android:text="@string/main_temperature"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_weatherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_mainTemperature"
                android:layout_margin="30dp"
                app:cardBackgroundColor="@color/raisin_black"
                app:cardElevation="10dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/windImage"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_below="@id/wind"
                            android:contentDescription="@string/image"
                            android:padding="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/wind" />


                        <TextView
                            android:id="@+id/TV_windSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/windImage"
                            android:text="@string/wind_speed"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/humidityImage"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_below="@id/humidity"
                            android:contentDescription="@string/image"
                            android:padding="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/humidity" />


                        <TextView
                            android:id="@+id/TV_humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/humidityImage"
                            android:text="@string/humidity_percentage"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feels_like"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/temperatureImage"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_below="@id/temperature"
                            android:contentDescription="@string/image"
                            android:padding="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/temperature" />


                        <TextView
                            android:id="@+id/TV_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/temperatureImage"
                            android:text="@string/main_temperature"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_forecastView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainCardView"
        android:background="@color/raisin_black"
        android:layout_marginTop="10dp"
        android:padding="10dp" >

        <!-- Forecasting goes here -->

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>